--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 # Project exclude paths
 /node_modules/
+/.idea/.gitignore
+/.idea/Caesar cipher CLI tool.iml
+/.idea/jsLibraryMappings.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
